--- a/CustomDialog/Views/MainWindow.axaml
+++ b/CustomDialog/Views/MainWindow.axaml
@@ -16,6 +16,6 @@
          <vm:MainWindowViewModel/>
     </Design.DataContext>
     
-    <TransitioningContentControl Content="{Binding GVM}" />
+    <TransitioningContentControl Content="{Binding GeneralViewModel}" />
     
 </Window>
