--- a/CustomDialog/Views/GeneralView.axaml
+++ b/CustomDialog/Views/GeneralView.axaml
@@ -35,8 +35,17 @@
             <ListBox Grid.Column="1"
                      Theme="{DynamicResource ButtonRadioGroupListBox}"
                      SelectionMode="Single"
-                     ItemsSource="{Binding TemplateStyles}"
-                     SelectedItem="{Binding BodyVM.SelectedStyle}">
+                     ItemsSource="{Binding StyleSelectorBox.StyleButtons}">
+                
+                <i:Interaction.Behaviors>
+                    <iac:EventTriggerBehavior EventName="SelectionChanged">
+                        <iac:InvokeCommandAction Command="{Binding StyleSelectorBox.Command}"
+                                                 CommandParameter="{Binding $self}"/>
+                        <iac:ChangePropertyAction TargetObject="{Binding BodyVM}"
+                                                  PropertyName="SelectedStyle" 
+                                                  Value="{Binding StyleSelectorBox.CurrentBodyTemplate}" />
+                    </iac:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
                 
                 <ListBox.ItemTemplate>
                     <DataTemplate>
