--- a/CustomDialog/Views/GeneralView.axaml
+++ b/CustomDialog/Views/GeneralView.axaml
@@ -3,10 +3,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:CustomDialog.ViewModels"
+             xmlns:ui="using:FluentAvalonia.UI.Controls"
              xmlns:nodes="clr-namespace:CustomDialog.Models.Nodes"
              xmlns:tc="using:CustomDialog.Templated_Controls"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:iac="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+             xmlns:converter="using:CustomDialog.Converters"
              mc:Ignorable="d"
              d:DesignWidth="800"
              d:DesignHeight="450"
@@ -17,7 +19,7 @@
         <vm:GeneralViewModel/>
     </Design.DataContext>
     
-    <Grid RowDefinitions="Auto, *">
+    <Grid RowDefinitions="Auto, *, Auto">
         <!-- Header -->
         <Grid Grid.Row="0"
               Background="Gray"
@@ -75,7 +77,8 @@
         </Grid>
         <!-- Body -->
         <Grid Grid.Row="1"
-              Background="DarkGray">
+              Background="DarkGray"
+              RowDefinitions="*,Auto">
             
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MinWidth="150" Width="Auto" />
@@ -85,7 +88,6 @@
             
             <!-- Sidebar (Tree) -->
             <ScrollViewer VerticalScrollBarVisibility="Auto"
-                          HorizontalScrollBarVisibility="Auto"
                           HorizontalContentAlignment="Left"
                           Grid.Column="0">
                 <TreeView ItemsSource="{Binding Nodes}"
@@ -132,10 +134,34 @@
                           ShowsPreview="True" />
             <!-- Main area -->
             <Border Grid.Column="2"
-                    Background="LightGray">
+                    Name="BodyBorder"
+                    Background="LightGray"
+                    Margin="0,0,15,0">
                 <TransitioningContentControl Content="{Binding BodyVM}"/>
             </Border>
+            
+            <Label Grid.Column="0"
+                   Grid.Row="1"
+                   Margin="10"
+                   HorizontalAlignment="Right"
+                   VerticalContentAlignment="Center"
+                   Content="Filter:" />
+            <ui:FAComboBox Grid.Column="2"
+                           Grid.Row="1"
+                           Margin="0, 10"
+                           IsEditable="True"
+                           Name="ComboBoxFilters"
+                           Width="{Binding #BodyBorder.Bounds.Width}"
+                           ItemsSource="{Binding Filters, Converter={StaticResource FilterConverter}}">
+                
+                <i:Interaction.Behaviors>
+                    <iac:EventTriggerBehavior EventName="SelectionChanged">
+                        <iac:InvokeCommandAction Command="{Binding FilterUpCommand}"
+                                                 CommandParameter="{Binding #ComboBoxFilters.SelectedIndex}"/>
+                    </iac:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
+                
+            </ui:FAComboBox>
         </Grid>
     </Grid>
-    
 </UserControl>
