Replaced DelegateCommand to ReactiveCommand + overwritten DirectoryHistory.cs

--- a/DemoApp/Views/BodyView.axaml
+++ b/DemoApp/Views/BodyView.axaml
@@ -23,7 +23,7 @@
             
             <i:Interaction.Behaviors>
                 <iac:EventTriggerBehavior EventName="DoubleTapped">
-                    <iac:InvokeCommandAction Command="{Binding ChangeSelectedCommand}" 
+                    <iac:InvokeCommandAction Command="{Binding ChangeSelectedReactiveCommand}" 
                                              CommandParameter="{Binding SelectedFileEntity}"/>
                 </iac:EventTriggerBehavior>
             </i:Interaction.Behaviors>
