--- a/DemoApp/App.axaml
+++ b/DemoApp/App.axaml
@@ -17,9 +17,8 @@
              </Application.DataTemplates>
   
              <Application.Styles>
-                 <sty:FluentAvaloniaTheme />
-                 <FluentTheme />
                  <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
-                 <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+                 <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
+                 <sty:FluentAvaloniaTheme />
              </Application.Styles>
 </Application>
