--- a/CustomDialogLibrary/Views/GeneralView.axaml
+++ b/CustomDialogLibrary/Views/GeneralView.axaml
@@ -2,7 +2,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ui="using:FluentAvalonia.UI.Controls"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:iac="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              xmlns:viewModels="clr-namespace:CustomDialogLibrary.ViewModels"
@@ -159,13 +158,14 @@
                    HorizontalAlignment="Right"
                    VerticalContentAlignment="Center"
                    Content="Filter:" />
-            <ui:FAComboBox Grid.Column="2"
-                           Grid.Row="1"
-                           Margin="0, 10"
-                           IsEditable="True"
-                           Name="ComboBoxFilters"
-                           Width="{Binding #BodyBorder.Bounds.Width}"
-                           ItemsSource="{Binding Filters, Converter={StaticResource FilterConverter}}">
+            
+            <ComboBox Grid.Column="2"
+                      Grid.Row="1"
+                      Margin="0, 10"
+                      Background="LightGray"
+                      Name="ComboBoxFilters"
+                      Width="{Binding #BodyBorder.Bounds.Width}"
+                      ItemsSource="{Binding Filters, Converter={StaticResource FilterConverter}}">
                 
                 <i:Interaction.Behaviors>
                     <iac:EventTriggerBehavior EventName="SelectionChanged">
@@ -174,7 +174,7 @@
                     </iac:EventTriggerBehavior>
                 </i:Interaction.Behaviors>
                 
-            </ui:FAComboBox>
+            </ComboBox>
         </Grid>
     </Grid>
 </UserControl>
