--- a/CustomDialogLibrary/Views/MainWindow.axaml
+++ b/CustomDialogLibrary/Views/MainWindow.axaml
@@ -2,19 +2,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModels="clr-namespace:DemoApp.ViewModels"
+        xmlns:viewModels="clr-namespace:CustomDialogLibrary.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="DemoApp.Views.MainWindow"
+        x:Class="CustomDialogLibrary.Views.MainWindow"
         x:DataType="viewModels:MainWindowViewModel"
         MinWidth="700"
         MinHeight="300"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="DemoApp">
+        Icon="/BakedAssets/aperture.ico"
+        Title="DemoApp"
+        Loaded="Control_OnLoaded">
     
     <Design.DataContext>
          <viewModels:MainWindowViewModel/>
     </Design.DataContext>
     
-    <TransitioningContentControl Content="{Binding GeneralViewModel}" />
+    <TransitioningContentControl Content="{Binding GeneralViewModel}"
+                                 Name="GeneralControl"/>
     
 </Window>
